# codewars

./: .gitignore  README.md
js/: cw.js  package-lock.json  package.json
js/5-kyu/: rot13.js
js/6-kyu/: are-they-the-same.js  array-diff.js  build-a-pile-of-cubes.js  build-tower.js  complementary-dna.js  consecutive-strings.js  count-the-smiley-faces.js  detect-pangram.js  mexican-wave.js  persistent-bugger.js  playing-with-digits.js  rot13.js  sort-the-odd.js  take-a-ten-minutes-walk.js  unique-in-order.js  write-number-in-expanded-form.js
js/7-kyu/: categorize-new-member.js  count-the-divisors-of-a-number.js  disemvowel-trolls.js  exes-and-ohs.js  get-the-middle-character.js  growth-of-a-population.js  is-this-a-triangle.js  jaden-casing-strings.js  list-filtering.js  money-money-money.js  mumbling.js  odd-or-even.js  remove-the-minimum.js  shortest-word.js  sum-of-odd-numbers.js  sum-of-the-first-nth-term-of-series.js  testing-1-2-3.js  vowel-count.js
js/8-kyu/: are-you-playing-banjo.js  basic-mathematical-operations.js  century-from-year.js  convert-a-number-to-a-string.js  convert-a-string-to-an-array.js  convert-number-to-reversed-array-of-digits.js  correct-the-mistakes-of-the-character-recognition-software.js  count-by-x.js  (+12 more)
python_solutions/: README.md  pyproject.toml
python_solutions/python_solutions/kyu_8/: basic_mathematical_operations.py  multiply.py  opposites_attract.py
python_solutions/tests/kyu_8/: basic_mathematical_operations_test.py
rust_solutions/: Cargo.toml
typescript_solutions/: .mocharc.json  package-lock.json  package.json
(+117 files in other folders)
